assets/css/app.css
/* ... */
.sponsor-page.row.container {margin-top: 30px;}
body.donors h1 {font-size: 52px;font-weight: 100;color: #ac3234;text-align:center;}

p.donors-top-text {
font-size: 22px;
color: #5E5E5E;
text-align: center;
line-height: 1.6;
font-weight: 100;
margin-top: 30px;
}

button.btn.btn-default.donation-btn {
margin: 0 auto;
font-size: 14px;
}

.atlas-sponsored {margin-top: 50px;color: #AFAFAF;margin-bottom: 50px;}

body.donors h3 {
color: #BF2129;
font-weight: 100;
font-size: 32px;
text-align: left;
margin-bottom: 10px;
border-bottom: 1px solid #EBEBEB;
padding-bottom: 10px;
border-bottom: :;
}

ul.twentyk-list li {
font-size: 24px!important;
font-weight: 500;
}

ul.tenk-list li {font-weight: 500;}

.donors ul.twentyk-list, 
ul.tenk-list, 
ul.fivek-list, 
ul.onek-list,
ul.fivehunny-list,
ul.additional-list {
list-style: none;
padding-left: 0px;
text-align: center;
margin-bottom: 5%;
}

ul.sponsor-list > li {
display: inline-block;
width: 15%;
height: auto;
margin: 2%;
vertical-align:middle;
}

ul.sponsor-list {text-align: center;}

ul.twentyk-list li,
ul.tenk-list li,
ul.fivek-list li,
ul.onek-list li,
ul.fivehunny-list li {
font-size: 18px;
line-height: 1.5em;
}

ul.additional-list {
font-size: 16px;
line-height: 1.5em;
-webkit-column-count: 3; /* Chrome, Safari, Opera */
-moz-column-count: 3; /* Firefox */
column-count: 3;
-webkit-column-gap: 40px; /* Chrome, Safari, Opera */
-moz-column-gap: 40px; /* Firefox */
column-gap: 40px;
-webkit-column-break-inside:avoid;
-moz-column-break-inside:avoid;
-o-column-break-inside:avoid;
-ms-column-break-inside:avoid;
column-break-inside:avoid;	
}

.last-board-member {margin-bottom:100px;}
 
/* ==========================================================================
   Contact
   ========================================================================== */

body.contact #consenses-about-banner {display:none;}
body.contact .container {margin: 0 auto;}

#frm_form_12_container {margin-top: 50px;}
#frm_field_121_container {width: 100%;}

body.contact label {
color: rgb(65, 65, 65);
font-family: 'proxima-nova';
font-weight: 300;
font-size: 18px;
}

body.contact fieldset input[type=text], 
body.contact fieldset input[type=email], 
body.contact fieldset textarea {
background: #F0F0F0;
border: none;
border-radius: 5px;
height: 45px;
width: 100%;
padding: 10px;
font-size: 18px;
color: #757575;
margin-bottom:10px;
}

body.contact fieldset textarea {height:145px!important;}

body.contact input[type="submit"] {
background-color: #BF2129;
border: none;
border-radius: 5px;
padding: 10px;
font-size: 22px;
color: #FFF;
transition:background-color .3s ease;
}

body.contact input[type="submit"]:hover,
body.contact input[type="submit"]:active {background-color: #E2131D;}


/* ==========================================================================
   Footer
   ========================================================================== */

footer {padding: 1%;color: #6b1116;background-color:#bf2129;margin-left: 0px!important;overflow: hidden;}
footer i {color: #6b1116;transition:color .3s ease;}
footer i:hover {color: #FFF;}
footer .caret {display: none;}

.row.footer-nav {
height: 35px;
}

#social ul {margin:0px; padding:0px; list-style: none;}
#social li {margin:0px; padding: 0px; list-style:none; display: block; float:left;}
#social li a {padding: 10px;}

#social li a {
text-decoration: none;
color: #6b1116;
font-weight: 100;
font-size: 13px;
transition:color .3s ease;
}

#social li a:hover {color: #FFF;}

p.credits {
font-size: 13px;
margin-top: 20px;
text-align: center;
}

p.credits a {
color: rgb(231, 136, 136);
}

footer input[type=text] {
background: transparent;
border-radius: 0;
border: transparent;
border-bottom:1px solid #6b1116!important;
-wenkit-box-shadow: none;
-moz-box-shadow: none;
box-shadow: none;
}

#menu-primary-navigation-1 {
list-style: none;
padding: 0px;
display: inline-block;
}

#menu-primary-navigation-1>li {
display: inline-block;
padding: 10px;
}

#menu-primary-navigation-1>li>a{
   text-decoration: none;
   color: #6b1116 ;
   font-weight: 100;
   font-size: 13px;
   transition:color .3s ease;
}

.dropdown-menu>li>a:hover, .dropdown-menu>li>a:focus {
background-color: #D53A3A;
}

#menu-primary-navigation ul.dropdown-menu li a {
font-family: 'proxima-nova';
font-weight: 200;
color: #FFF;
text-transform: uppercase;
}

#menu-primary-navigation-1>li>a:hover {color:#FFF;}

.socials {
   display: inline-block;
list-style: none;
}

.socials>li{
   display: inline-block;
}

.socials>li>a{
   padding: 15px;
   color: #000;
}

.socials>li>a>i>*{
   text-decoration: none;
}


/* ==========================================================================
   WordPress Generated Classes
   See: http://codex.wordpress.org/CSS#WordPress_Generated_Classes
   ========================================================================== */

.aligncenter { display: block; margin: 0 auto; text-align:center;}
.alignleft { float: left; }
.alignright { float: right; }
figure.alignnone { margin-left: 0; margin-right: 0; }



/* ==========================================================================
   Media Queries
   ========================================================================== */

/* Extra small devices (phones, up to 480px) */
/* No media query since this is the default in Bootstrap */

/* Small devices (tablets, 768px and up) */
@media (min-width: 768px) {

.col {max-width:100%; margin:0px auto;}

.artist-sidebar {
width: 25%;
float: left;
}

.submit-btn {
padding: 10px 8px 2px 8px;
}

.chain-btn.btn {
padding: 20px 8px;
}

.week-header .btn-container {width:auto;}

.home-events .btn-default {font-size: 41px;}
.week-header .btn-container {width:49.5%;}

.welcome-box h2 {font-size: 60px;}

}

/* Medium devices (desktops, 992px and up) */
@media (min-width: 992px) {

.col {max-width:80%; margin:0px auto;}

.home-top{
   padding-bottom: 20%;
}\

}
/* ... */

